<resources>
    <string name="app_name">My ApplicationApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Mascota</string>
    <string name="menu_vacunas">Vacunas</string>
    <string name="menu_slideshow">Medico</string>
    <string name="menu_mascota">Mascota</string>
    <string name="menu_dispensador">Dispensador</string>
    <string name="menu_horario">Horario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fullName">Nombre Completo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_conf">Confirmar Password</string>
    <string name="check_in">Registrarse</string>
    <string name="Log_in">Iniciar Sesion</string>

    <string name="val_empty">El campo no puedo ser vacio</string>
    <string name="Passwords_match">Las contraseñas no coinciden</string>
    <string name="invalid_email">Correo electrónico invalido</string>
    <string name="confirm">Aceptar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="automatic_on">Automatico(ON))</string>
    <string name="automatic_off">Automatico(OFF))</string>
    <string name="programmable_on">Programable(ON))</string>
    <string name="programmable_off">Programable(OFF))</string>
    <string name="select_time">Seleccione hora</string>
    <string name="programmable_activated">Modo Programable activado</string>
    <string name="display_error">Error al mostrar</string>
    <string name="automatic_activated">Modo automático activado</string>
    <string name="get_pet">mascotag</string>
    <string name="rage">Rabia</string>
    <string name="distemper">Distemper</string>
    <string name="parvovirus">Parvovirus</string>
</resources>