<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mascota"
            android:icon="@drawable/perro"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_vacunas"
            android:icon="@drawable/medico"
            android:title="@string/menu_vacunas" />
        <item
            android:id="@+id/nav_vmapa"
            android:icon="@drawable/vacuna"
            android:title="MMapa" />
        <item
            android:id="@+id/nav_medico"
            android:icon="@drawable/medico"
            android:title="@string/menu_slideshow" />



        <item
            android:id="@+id/nav_Horario"
            android:icon="@drawable/dispen"
            android:title="@string/menu_dispensador" />

    </group>
</menu>